sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: '<-' expected but ')' found.
for(i<getNombreValeurs()-2 to 0)
                               ^AlgBubbleSort2:11: error: illegal start of simple expression
}
^AlgBubbleSort2:15: error: Unmatched closing brace '}' ignored here
}
^